@@ -5,10 +5,8 @@
  */
 
 /* html5 compat */
-article,
-header,
-footer,
-nav {
+article,aside,details,figcaption,figure,
+footer,header,hgroup,menu,nav,section {
 	display: block;
 }
 
