@@ -18,6 +18,8 @@ ikiwiki (3.20130904.2) UNRELEASED; urgency=low
     corrupt themselves, which happens all too frequently).
   * osm: Remove invalid use of charset on embedded javascript tags.
     Closes: #731197
+  * style.css: Add compatability definitions for more block-level
+    html5 elements. Closes: #731199
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Sep 2013 10:01:10 -0400
 
